--- a/drivers/clk/rockchip/Kconfig
+++ b/drivers/clk/rockchip/Kconfig
@@ -23,6 +23,13 @@ config CLK_RV110X
 	help
 	  Build the driver for RV110x Clock Driver.
 
+config CLK_RK1808
+   tristate "Rockchip RK1808 clock controller support"
+   depends on ARM64 || COMPILE_TEST
+   default y
+   help
+     Build the driver for RK1808 Clock Driver.
+
 config CLK_RK3036
 	bool "Rockchip RK3036 clock controller support"
 	depends on ARM || COMPILE_TEST
@@ -99,4 +106,68 @@ config CLK_RK3588
 	default y
 	help
 	  Build the driver for RK3588 Clock Driver.
+
+config ROCKCHIP_CLK_COMPENSATION
+   bool "Rockchip Clk Compensation"
+   help
+     Say y here to enable clk compensation(+/- 1000 ppm).
+
+config ROCKCHIP_CLK_LINK
+   tristate "Rockchip clock link support"
+   default CLK_RK3588
+   help
+     Say y here to enable clock link for Rockchip.
+
+config ROCKCHIP_CLK_BOOST
+   bool "Rockchip Clk Boost"
+   help
+     Say y here to enable clk boost.
+
+config ROCKCHIP_CLK_INV
+   bool "Rockchip Clk Inverter"
+   help
+     Say y here to enable clk Inverter.
+
+config ROCKCHIP_CLK_PVTM
+   bool "Rockchip Clk Pvtm"
+   help
+     Say y here to enable clk pvtm.
+
+config ROCKCHIP_DDRCLK
+   bool
+
+config ROCKCHIP_DDRCLK_SCPI
+   bool "Rockchip DDR Clk SCPI"
+   select ROCKCHIP_DDRCLK
+   help
+     Say y here to enable ddr clk scpi.
+
+config ROCKCHIP_DDRCLK_SIP
+   bool "Rockchip DDR Clk SIP"
+   select ROCKCHIP_DDRCLK
+   help
+     Say y here to enable ddr clk sip.
+
+config ROCKCHIP_DDRCLK_SIP_V2
+   bool "Rockchip DDR Clk SIP V2"
+   select ROCKCHIP_DDRCLK
+   help
+     Say y here to enable ddr clk sip v2.
+
+config ROCKCHIP_PLL_RK3066
+   bool "Rockchip PLL Type RK3066"
+   help
+     Say y here to enable pll type is rk3066.
+
+config ROCKCHIP_PLL_RK3399
+   bool "Rockchip PLL Type RK3399"
+   help
+     Say y here to enable pll type is rk3399.
+
+config ROCKCHIP_PLL_RK3588
+   bool "Rockchip PLL Type RK3588"
+   default y if CPU_RK3588
+   help
+     Say y here to enable pll type is rk3588.
+
 endif
