--- a/arch/arm64/boot/dts/rockchip/rk3588-firefly-itx-3588j.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3588-firefly-itx-3588j.dtsi
@@ -10,7 +10,7 @@
 
  / {
 	chosen: chosen {
-		bootargs = "earlycon=uart8250,mmio32,0xfeb50000 console=ttyFIQ0 irqchip.gicv3_pseudo_nmi=0 root=PARTLABEL=rootfs rootfstype=ext4 ro rootwait overlayroot=device:dev=PARTLABEL=userdata,fstype=ext4,mkfs=1 coherent_pool=1m systemd.gpt_auto=0 cgroup_enable=memory swapaccount=1";
+		bootargs = "earlycon=uart8250,mmio32,0xfeb50000 console=ttyS2,1500000n1 irqchip.gicv3_pseudo_nmi=0 root=PARTLABEL=rootfs rootfstype=ext4 ro rootwait overlayroot=device:dev=PARTLABEL=userdata,fstype=ext4,mkfs=1 coherent_pool=1m systemd.gpt_auto=0 cgroup_enable=memory swapaccount=1";
 	};
 	//ver v1.1 support
 	fan: pwm-fan {
@@ -175,6 +175,11 @@
 
 &uart1{
 	pinctrl-0 = <&uart1m1_xfer>;
+	status = "okay";
+};
+
+&uart2{
+	pinctrl-0 = <&uart2m1_xfer>;
 	status = "okay";
 };
 
