disable fiq_debugger

--- a/arch/arm64/boot/dts/rockchip/rk3588-firefly-itx-3588j.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3588-firefly-itx-3588j.dtsi
@@ -178,6 +178,10 @@
 	status = "okay";
 };
 
+&fiq_debugger{
+		status = "disabled";
+};
+
 &uart2{
 	pinctrl-0 = <&uart2m1_xfer>;
 	status = "okay";
