--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -1152,6 +1152,14 @@ config MFD_RK806
 	  through SPI interface. The device supports multiple sub-devices
 	  including interrupts, LDO & DCDC regulators, and onkey.
 
+config MFD_RK806_SPI
+	tristate "RK806 Power Management chip with SPI"
+	select MFD_RK806
+	select REGMAP_SPI
+	depends on SPI_MASTER
+	help
+	  If you say yes here you get support for the RK806 PM chips with SPI interface.
+
 config MFD_RK808
 	tristate "Rockchip RK805/RK808/RK809/RK817/RK818 Power Management Chip"
 	depends on I2C && OF
