--- a/arch/arm64/boot/dts/rockchip/rk3588-firefly-itx-3588j.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3588-firefly-itx-3588j.dtsi
@@ -10,7 +10,7 @@
 
  / {
 	chosen: chosen {
-		bootargs = "earlycon=uart8250,mmio32,0xfeb50000 console=ttyS2,1500000n1 irqchip.gicv3_pseudo_nmi=0 root=/dev/mmcblk2p2 rootfstype=ext4 rootwait";
+		bootargs = "earlycon=uart8250,mmio32,0xfeb50000 console=ttyS2,1500000n1 irqchip.gicv3_pseudo_nmi=0 rootfstype=ext4 rootwait";
 	};
 	//ver v1.1 support
 	fan: pwm-fan {
